--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -3,6 +3,6 @@ $font-primary: "Montserrat", sans-serif;
 $font-secondary: "Droid Serif", serif;
 
 // Colors
-$color-accent: #ffbd0c;
+$color-accent: #fff7cc;
 $black: #111;
 
