--- a/_layouts/tag.html
+++ b/_layouts/tag.html
@@ -2,7 +2,7 @@
 layout: default
 current: tag
 title: Tag Page
-cover: /assets/images/covers/7.jpg
+cover: /assets/images/covers/tag.jpeg
 class: 'home-template'
 ---
 
