--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,8 +11,7 @@
     </div><!-- .footer-top -->
 
     <div class="site-info inner-wide">
-        <p><a href="#">{{ site.name }}</a> &copy; {{ site.time | date: '%Y' }}. Curious theme by <a target="_blank" href="https://justgoodthemes.com/">JustGoodThemes</a>. 
-        <br /> Powered by <a target="_blank" href="https://jekyllrb.com/">Jekyll</a>.
+        <p><a href="#">{{ site.name }}</a> &copy; {{ site.time | date: '%Y' }}.</a>.
         </p>
     </div><!-- .site-info -->
 
