--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,7 +11,7 @@
     </div><!-- .footer-top -->
 
     <div class="site-info inner-wide">
-        <p><a href="#">{{ site.name }}</a> &copy; {{ site.time | date: '%Y' }}.</a>.
+        <p><a href="#">{{ site.name }} | words + photography + digital art by hervé eulacia</a> &copy; 1991-{{ site.time | date: '%Y' }}</a> except where indicated.
         </p>
     </div><!-- .site-info -->
 
