--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -3,7 +3,7 @@
 		
 		<div class="widget-area">
 			<nav id="sidebar-navigation" class="widget site-navigation">
-				<h2 class="widget-title">Explore Site</h2>
+				<h2 class="widget-title">about townOfsulaco</h2>
 				<ul class="menu">
 					{% for link in site.navigation %}
 					<li class="menu-item"><a href="{{ link.url }}">{{ link.text }}</a></li>
