--- a/_includes/widgets.html
+++ b/_includes/widgets.html
@@ -1,14 +1,7 @@
-{% if site.name and site.site_description %}
-<section class="widget widget-text">
-    <h2 class="widget-title">About {{ site.name }}</h2>
-    <p>{{ site.site_description }}</p>
-</section>
-{% endif %}
-
 {% if site.mailchimp_url %}
 <section class="widget widget-newsletter">
     <h2 class="widget-title">Subscribe to {{ site.name }}</h2>
-    <p>Get the latest and greatest from {{ site.name }} delivered straight to your inbox every week.</p>
+    <p>Get notified when new content is posted to {{ site.name }}.</p>
     <!-- Begin MailChimp Signup Form -->
     <div id="mc_embed_signup">
         <form action="{{ site.mailchimp_url }}" method="post" id="mc-embedded-subscribe-form"
