--- a/_includes/footer-widgets.html
+++ b/_includes/footer-widgets.html
@@ -41,7 +41,7 @@
                 {% if site.mailchimp_url %}
                 <section class="widget widget-newsletter">
                     <h2 class="widget-title">Subscribe to {{ site.name }}</h2>
-                    <p>Get the latest and greatest from {{ site.name }} delivered straight to your inbox every week.</p>
+                    <p>Get notified when new content is posted to {{ site.name }}.</p>
                     <!-- Begin MailChimp Signup Form -->
                     <div id="mc_embed_signup">
                         <form action="{{ site.mailchimp_url }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
