--- a/_includes/newsletter-box.html
+++ b/_includes/newsletter-box.html
@@ -2,8 +2,8 @@
     <div class="subscribe-box">
         <div class="subscribe-inside">
 
-            <h2 class="subscribe-box-title">Subscribe to {{ site.name }} newsletter</h2>
-            <p>Get the latest and greatest from {{ site.name }} delivered straight to your inbox every week.</p>
+            <h2 class="subscribe-box-title">Subscribe to {{ site.name }}</h2>
+            <p>Get notified when new content is posted to {{ site.name }}.</p>
             <!-- Begin MailChimp Signup Form -->
             <div id="mc_embed_signup">
                 <form action="{{ site.mailchimp_url }}" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
